--- a/README.rdoc
+++ b/README.rdoc
@@ -2,7 +2,7 @@
 
 E-mail writing totally follows the 80/20 rule. I often find myself composing the bulk of an email in ~5 minutes, and then spending ~20 minutes making tiny improvements that are basically irrelevant. This is a horrible waste of time. 
 
-I wrote this app to help me not do that: http://ancient-earth-8054.herokuapp.com. 
+I wrote this app to help me not do that: http://ancient-earth-8054.herokuapp.com. (Note: I am not sure how secure this app is, so it's probably prudent to sign in with a throwaway.)
 
 After signing into your GMail account, you write in the title of the email, your recipients, and your time limit. You are then taken to a page with a textbox and a send button. If you don't press the send button yourself by the time limit (e.g. if you run out of time or close the page), whatever was in the textbox will get sent. 
 
